--- a/index.html
+++ b/index.html
@@ -1,28 +1,53 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- GoogleFont -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <style>
-        .font-lexend {
-  font-family: "Lexend", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-}
+      .font-lexend {
+        font-family: "Lexend", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-style: normal;
+      }
     </style>
 
     <!-- DaisiUi -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css">
 
     <title>Donation_Assignment</title>
-</head>
-<body class="font-lexend">
-    <h1>Hello</h1>
-</body>
+  </head>
+  <body class="font-lexend">
+    <header class="bg-[#F9F7F3] py-6">
+      <nav class="w-10/12 mx-auto">
+        <div class="flex justify-between items-center">
+          <div>
+            <button class="btn btn-green font-semibold text-xl">Blog</button>
+          </div>
+          <div class="flex items-center  gap-3">
+            <img src="./assets/logo.png" alt="" />
+            <p class="font-semibold text-xl">Donate Bangladesh</p>
+          </div>
+          <div class="flex items-center gap-3 text-xl">
+            <img src="./assets/coin.png" alt="" />
+            <p class="text-[#111111B3] font-medium"><span>5500</span> BDT</p>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main></main>
+  </body>
 </html>
