--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <body class="font-lexend">
     <header class="bg-[#F9F7F3] py-6">
       <nav class="w-10/12 mx-auto">
-        <div class="flex justify-between items-center">
+        <div class="flex flex-col space-y-3 md:flex-row md:justify-between items-center">
           <div>
             <button class="btn btn-green font-semibold text-xl">Blog</button>
           </div>
@@ -48,6 +48,8 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+        <!-- Donation and History button -->
+    </main>
   </body>
 </html>
