Donation and History button created

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
     </header>
     <main>
         <!-- Donation and History button -->
+
+        <div class="mt-20 flex justify-center gap-4">
+            <button class="btn btn-green font-semibold text-xl">Donation</button>
+            <button disabled class="btn btn-green font-semibold text-xl ">History</button>
+
+        </div>
     </main>
   </body>
 </html>
