--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
     <title>Donation_Assignment</title>
   </head>
-  <body class="font-lexend">
-    <header>
+  <body class="font-lexend ">
+    <header class="sticky top-0 z-10  bg-zinc-50">
       <section class="bg-[#F9F7F3] py-6">
         <nav class="w-10/12 mx-auto">
           <div
@@ -53,7 +53,7 @@
       </section>
       <!-- Donation and History button -->
 
-      <div class="mt-20 flex justify-center gap-4">
+      <div class="mt-20 flex justify-center gap-4 ">
         <button class="btn btn-green font-semibold text-xl">Donation</button>
         <button disabled class="btn btn-green font-semibold text-xl">
           History
@@ -78,7 +78,7 @@
             <!-- Card-content -->
             <div class="flex-1 space-y-7">
               <div
-                class="p-4 bg-[#1111110D] flex items-center gap-2 rounded-2xl w-32"
+                class="p-4 bg-[#1111110D] flex items-center justify-center gap-2 rounded-2xl w-44"
               >
                 <img src="./assets/coin.png" alt="" />
                 <p class="text-[#111111B3] text-base"><span>0</span> BDT</p>
@@ -124,10 +124,10 @@
             <!-- Card-content -->
             <div class="flex-1 space-y-7">
               <div
-                class="p-4 bg-[#1111110D] flex items-center gap-2 rounded-2xl w-32"
+                class="p-4 bg-[#1111110D] flex items-center justify-center gap-2 rounded-2xl w-44"
               >
                 <img src="./assets/coin.png" alt="" />
-                <p class="text-[#111111B3] text-base"><span>0</span> BDT</p>
+                <p class="text-[#111111B3] text-base"><span>600</span> BDT</p>
               </div>
               <h2 class="card-title font-bold">
                 Donate for Flood Relief in Feni,Bangladesh
@@ -165,10 +165,10 @@
             <!-- Card-content -->
             <div class="flex-1 space-y-7">
               <div
-                class="p-4 bg-[#1111110D] flex items-center gap-2 rounded-2xl w-32"
+                class="p-4 bg-[#1111110D] flex items-center justify-center gap-2 rounded-2xl w-44"
               >
                 <img src="./assets/coin.png" alt="" />
-                <p class="text-[#111111B3] text-base"><span>0</span> BDT</p>
+                <p class="text-[#111111B3] text-base"><span>2400</span> BDT</p>
               </div>
               <h2 class="card-title font-bold">
                 Aid for Injured in the Quota Movement
