Card section all functionality done

--- a/blog.html
+++ b/blog.html
@@ -54,8 +54,8 @@
             <!-- Donation and History button -->
       
             <div class="mt-20 flex justify-center gap-4 ">
-              <button class="btn btn-green font-semibold text-xl">Donation</button>
-              <button disabled class="btn btn-green font-semibold text-xl">
+              <button id="btn-donation-section"  class="btn btn-green font-semibold text-xl">Donation</button>
+              <button  class="btn btn-outline font-semibold text-xl">
                 History
               </button>
             </div>
@@ -94,5 +94,8 @@
           </div>
       </div>
     </section>
+
+    <script src="./utilities.js"></script>
+    <script src="./features.js"></script>
 </body>
 </html>
