--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="flex items-center gap-3 text-xl">
               <img src="./assets/coin.png" alt="" />
-              <p class="text-[#111111B3] font-medium"><span>5500</span> BDT</p>
+              <p class="text-[#111111B3] font-medium"><span id="main-balance">5500</span> BDT</p>
             </div>
           </div>
         </nav>
@@ -81,7 +81,7 @@
                 class="p-4 bg-[#1111110D] flex items-center justify-center gap-2 rounded-2xl w-44"
               >
                 <img src="./assets/coin.png" alt="" />
-                <p class="text-[#111111B3] text-base"><span>0</span> BDT</p>
+                <p class="text-[#111111B3] text-base"><span id="noakhali-balance">0</span> BDT</p>
               </div>
               <h2 class="card-title font-bold">
                 Donate for Flood at Noakhali, Bangladesh
@@ -95,14 +95,14 @@
                 the lives of those in need.
               </p>
 
-              <input
+              <input id="noakhali-input-field"
                 class="p-5 border border-1 rounded-xl w-full"
                 type="text"
                 placeholder="Write Donation Amount"
               />
 
               <div>
-                <button class="my-3 btn w-full btn-green font-semibold text-xl">
+                <button onclick="handleDonate('noakhali-input-field', 'noakhali-balance')" class="my-3 btn w-full btn-green font-semibold text-xl">
                   Donate Now
                 </button>
               </div>
@@ -127,7 +127,7 @@
                 class="p-4 bg-[#1111110D] flex items-center justify-center gap-2 rounded-2xl w-44"
               >
                 <img src="./assets/coin.png" alt="" />
-                <p class="text-[#111111B3] text-base"><span>600</span> BDT</p>
+                <p class="text-[#111111B3] text-base"><span id="feni-balance">0</span> BDT</p>
               </div>
               <h2 class="card-title font-bold">
                 Donate for Flood Relief in Feni,Bangladesh
@@ -136,14 +136,14 @@
                 The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need.
               </p>
 
-              <input
+              <input id="feni-input-field"
                 class="p-5 border border-1 rounded-xl w-full"
                 type="text"
                 placeholder="Write Donation Amount"
               />
 
               <div>
-                <button class="my-3 btn w-full btn-green font-semibold text-xl">
+                <button onclick="handleDonate('feni-input-field', 'feni-balance')" class="my-3 btn w-full btn-green font-semibold text-xl">
                   Donate Now
                 </button>
               </div>
@@ -168,7 +168,7 @@
                 class="p-4 bg-[#1111110D] flex items-center justify-center gap-2 rounded-2xl w-44"
               >
                 <img src="./assets/coin.png" alt="" />
-                <p class="text-[#111111B3] text-base"><span>2400</span> BDT</p>
+                <p class="text-[#111111B3] text-base"><span id="quota-movement-balance">0</span> BDT</p>
               </div>
               <h2 class="card-title font-bold">
                 Aid for Injured in the Quota Movement
@@ -177,14 +177,14 @@
                 The recent Quota movement has resulted in numerous injuries and significant hardship for many individuals. Your support is crucial in providing medical assistance, rehabilitation, and necessary supplies to those affected. By contributing, you help ensure that injured individuals receive the care and support they need during this challenging time. Every donation plays a vital role in alleviating their suffering and aiding in their recovery. Please consider making a donation to support these brave individuals in their time of need.
               </p>
 
-              <input
+              <input id="quota-input-field"
                 class="p-5 border border-1 rounded-xl w-full"
                 type="text"
                 placeholder="Write Donation Amount"
               />
 
               <div>
-                <button class="my-3 btn w-full btn-green font-semibold text-xl">
+                <button onclick="handleDonate('quota-input-field', 'quota-movement-balance')" class="my-3 btn w-full btn-green font-semibold text-xl">
                   Donate Now
                 </button>
               </div>
@@ -194,8 +194,18 @@
       </section>
 
       <!-- Donation Card Section ends-->
+
+      <!-- history section starts -->
+
+      <section class="">
+
+      </section>
+
+      <!-- history section ends -->
     </main>
 
     <script src="./blog.js"></script>
+    <script src="./utilities.js"></script>
+    <script src="./features.js"></script>
   </body>
 </html>
