Blogs answer done

--- a/blog.html
+++ b/blog.html
@@ -68,28 +68,30 @@
             <input type="radio" name="my-accordion-2" checked="checked" />
             <div class="collapse-title text-xl font-medium">What is the Document Object Model (DOM)?</div>
             <div class="collapse-content">
-              <p>hello</p>
+              <p>The Document Object Model(DOM) is a programming interface that represents a web page's structure and allows programs to change its content,style and structure</p>
             </div>
           </div>
           <div class="collapse collapse-arrow bg-base-200">
             <input type="radio" name="my-accordion-2" />
             <div class="collapse-title text-xl font-medium">How do you select an element from the DOM?</div>
             <div class="collapse-content">
-              <p>hello</p>
+              <p>We can select an element by various types..Example-1>getElementById. 2>getElementsByClassName 3>getElementsByTagName 4>querySelector 5>querySelectorAll etc.. </p>
             </div>
           </div>
           <div class="collapse collapse-arrow bg-base-200">
             <input type="radio" name="my-accordion-2" />
             <div class="collapse-title text-xl font-medium">What is event delegation in the context of the DOM, and why is it useful?</div>
             <div class="collapse-content">
-              <p>hello</p>
+              <p>Event delegation is a technique in JavaScript that allows you to handle events efficiently by taking advantage of event bubbling. Instead of adding event listeners to individual child elements (which could be numerous), you can add a single event listener to a parent element. When an event occurs on any of the child elements, it bubbles up to the parent, where the event listener can catch it and handle it accordingly.</p>
             </div>
           </div>
           <div class="collapse collapse-arrow bg-base-200">
             <input type="radio" name="my-accordion-2" />
             <div class="collapse-title text-xl font-medium">How do you manipulate an element's attributes and styles using the DOM?</div>
             <div class="collapse-content">
-              <p>hello</p>
+              <p>You can manipulate the attribute by using getAttribute(), setAttribute(), removeAttribute().
+                To manipulate CSS styles of an element, you can use the style property or modify the classList to add or remove classes that define styles.
+              </p>
             </div>
           </div>
       </div>
