backdrop blur added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <title>Donation_Assignment</title>
   </head>
   <body class="font-lexend">
-    <header class="sticky top-0 z-10 bg-zinc-50">
+    <header class="sticky top-0 z-10  backdrop-blur-md">
       <section class="bg-[#F9F7F3] py-6">
         <nav class="w-10/12 mx-auto">
           <div
